--- a/Portfolio 1/index.html
+++ b/Portfolio 1/index.html
@@ -22,10 +22,10 @@
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#sobre">Sobre</a>
-            <a href="#servicos">Serviços</a>
+            <a href="#about">Sobre</a>
+            <a href="#services">Serviços</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contato">Contato</a>
+            <a href="#contact">Contato</a>
         </nav>
     </header>
 
@@ -35,8 +35,9 @@
         <div class="home-content">
             <h3>Eai viajante, sou eu</h3>
             <h1>Gabriel Centeno</h1>
-            <h3>e Eu sou um <span>Desenvolvedor Full Stack Junior</span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ipsam eaque, sit nam enim asperiores ab. Dolore.</p>
+            <h3>E eu sou um <span>Desenvolvedor Full Stack Junior</span></h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ipsam eaque, 
+                sit nam enim asperiores ab. Dolore.</p>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
                 <a href="#"><i class='bx bxl-github'></i></a>
@@ -51,6 +52,31 @@
     </section>
 
     <!-- about section design -->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="images/about.png" alt="">
+      </div>
+
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Full Stack Developer Junior</h3>
+        <p>Entusiasta em tecnologias, fissurado por desenvolvimento
+          e soluções, estudando para moldar a tecnologia ao meu
+          favor, ao favor do mundo.
+          E-sports, esportes, estudos, jogos, problemas, coisas que
+          convivo todos os dias e me acompanham em minha
+          jornada.
+          Atualmente estou desenvolvendo cada vez mais meu
+          conhecimento, para em breve, me tornar um
+          Desenvolvedor Fullstack.
+          Isso tudo é muito mais do que somente amar a tecnologia,
+          é também amar servir ao próximo, e de alguma maneira
+          tentar melhorar o mundo pelo menos 1% todos os dias.
+          Cada dia melhor, nem que seja 1%, estarei sempre
+          progredindo</p>
+          <a href="#" class="btn">Read More</a>
+      </div>
+    </section>
 
     <!-- services section design -->
 
