--- a/Portfolio 1/index.html
+++ b/Portfolio 1/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Gabriel Centeno</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -39,7 +39,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ipsam eaque, 
                 sit nam enim asperiores ab. Dolore.</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.linkedin.com/in/gabriel-centeno-7a1611203/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="#"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
