--- a/Portfolio 1/index.html
+++ b/Portfolio 1/index.html
@@ -58,29 +58,120 @@
       </div>
 
       <div class="about-content">
-        <h2 class="heading">About <span>Me</span></h2>
+        <h2 class="heading">Sobre <span>Mim</span></h2>
         <h3>Full Stack Developer Junior</h3>
         <p>Entusiasta em tecnologias, fissurado por desenvolvimento
           e soluções, estudando para moldar a tecnologia ao meu
-          favor, ao favor do mundo.
+          favor, ao favor do mundo. <br>
           E-sports, esportes, estudos, jogos, problemas, coisas que
           convivo todos os dias e me acompanham em minha
-          jornada.
+          jornada. <br>
           Atualmente estou desenvolvendo cada vez mais meu
           conhecimento, para em breve, me tornar um
-          Desenvolvedor Fullstack.
+          Desenvolvedor Fullstack. <br>
           Isso tudo é muito mais do que somente amar a tecnologia,
           é também amar servir ao próximo, e de alguma maneira
-          tentar melhorar o mundo pelo menos 1% todos os dias.
+          tentar melhorar o mundo pelo menos 1% todos os dias. <br>
           Cada dia melhor, nem que seja 1%, estarei sempre
-          progredindo</p>
+          progredindo.</p>
           <a href="#" class="btn">Read More</a>
       </div>
     </section>
 
     <!-- services section design -->
 
+    <section class="services" id="services">
+      <h2 class="heading">Meus <span>Serviços</span></h2>
+
+      <div class="services-container">
+        <div class="services-box">
+          <i class='bx bx-code-alt'></i>
+          <h3>Desenvolvimento Web</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
+          <a href="#" class="btn">Saiba Mais</a>
+        </div>
+
+        <div class="services-box">
+          <i class='bx bx-code-alt'></i>
+          <h3>Desenvolvimento Back End</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
+          <a href="#" class="btn">Saiba Mais</a>
+        </div>
+
+        <div class="services-box">
+          <i class='bx bx-code-alt'></i>
+          <h3>Desenvolvimento Full Stack</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
+          <a href="#" class="btn">Saiba Mais</a>
+        </div>
+      </div>
+    </section>
+
     <!-- portfolio section design -->
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading"><span>Projetos</span> Recentes</h2>
+
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="images/portfolio1.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Landing Page Responsiva</h4>
+            <p>Desenvolvimento exemplo de uma landing page simples totalmente responsiva com flex boxes, grids, menu interativo e objetivo, botão para retornar ao topo e menu lateral responsivo utilizando apenas HTML e CSS (JavaScript é utilizado na maioria dos desenvolvimentos, essa é uma exceção onde ele não foi aplicado).</p>
+            <a href="https://landingpage100teno.netlify.app/#intro" target="_blank"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio2.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Em desenvolvimento...</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio3.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Em desenvolvimento...</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio4.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Em desenvolvimento...</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+          </div>
+
+          <div class="portfolio-box">
+            <img src="images/portfolio5.jpg" alt="">
+            <div class="portfolio-layer">
+              <h4>Em desenvolvimento...</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+              <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio6.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Em desenvolvimento...</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+      
+      </div>
+    </section>
+
+
+
+
 
     <!-- contact section design -->
 
