--- a/Portfolio 1/index.html
+++ b/Portfolio 1/index.html
@@ -40,8 +40,8 @@
                 sit nam enim asperiores ab. Dolore.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/gabriel-centeno-7a1611203/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://github.com/100teno" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/gabrielcentheno/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
