--- a/Portfolio 1/index.html
+++ b/Portfolio 1/index.html
@@ -86,7 +86,7 @@
       <div class="services-container">
         <div class="services-box">
           <i class='bx bx-code-alt'></i>
-          <h3>Desenvolvimento Web</h3>
+          <h3>Desenvolvimento Front End</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
           <a href="#" class="btn">Saiba Mais</a>
         </div>
