--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <div class="home-content">
             <h3>Eai viajante, sou eu</h3>
             <h1>Gabriel Centeno</h1>
-            <h3>E eu sou um <span>Desenvolvedor Full Stack Junior</span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ipsam eaque, 
-                sit nam enim asperiores ab. Dolore.</p>
+            <h3>E eu sou um <span class="multiple-text"></span></h3>
+            <p>Em constante evolução, em busca da melhor versão de mim. <br> Programador Junior atualmente estudando as mais recentes e uteis linguagens e frameworks, para um dia me tornar um grande Desenvolvedor Fullstack. <br> Atualmente cursando Analise e Desenvolvimento de Sistemas pela UNINTER. <br>
+            Sempre com uma incessante vontade de vencer, aprender mais a cada dia para um dia chegar no topo.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/gabriel-centeno-7a1611203/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/100teno" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/gabrielcentheno/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="images/CV_2024.pdf" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -59,7 +59,7 @@
 
       <div class="about-content">
         <h2 class="heading">Sobre <span>Mim</span></h2>
-        <h3>Full Stack Developer Junior</h3>
+        <h3>Full Stack Developer Junior!</h3>
         <p>Entusiasta em tecnologias, fissurado por desenvolvimento
           e soluções, estudando para moldar a tecnologia ao meu
           favor, ao favor do mundo. <br>
@@ -69,11 +69,13 @@
           Atualmente estou desenvolvendo cada vez mais meu
           conhecimento, para em breve, me tornar um
           Desenvolvedor Fullstack. <br>
+          Atualmente estudando <strong>JavaScript, TypeScript, React, Node, Express, Redux, noSQL.</strong> <br>
           Isso tudo é muito mais do que somente amar a tecnologia,
           é também amar servir ao próximo, e de alguma maneira
           tentar melhorar o mundo pelo menos 1% todos os dias. <br>
           Cada dia melhor, nem que seja 1%, estarei sempre
-          progredindo.</p>
+          progredindo.
+        </p>
           <a href="#" class="btn">Read More</a>
       </div>
     </section>
@@ -87,21 +89,28 @@
         <div class="services-box">
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Front End</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
+          <p>Utilizo as mais recentes e utilizadas tecnologias para desenvolver sites responsivos, estilizados e personalizados do jeito que você me pedir.<br>
+            <br>Landing Pages, Blogs, Portfolios entre outros. <br>
+            <b>JavaScript, TypeScript, React, HTML & CSS.</b>
+          </p>
           <a href="#" class="btn">Saiba Mais</a>
         </div>
 
         <div class="services-box">
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Back End</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
+          <p><b>Em breve</b><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, soluta?
+          </p>
           <a href="#" class="btn">Saiba Mais</a>
         </div>
 
         <div class="services-box">
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Full Stack</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem animi esse cupiditate iusto officiis ex deserunt deleniti voluptatem eum accusantium libero, in quod. Id perspiciatis ducimus est commodi cumque placeat.</p>
+          <p><b>Em breve</b><br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, perspiciatis.
+          </p>
           <a href="#" class="btn">Saiba Mais</a>
         </div>
       </div>
@@ -146,14 +155,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
             <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
+        </div>
 
-          <div class="portfolio-box">
-            <img src="images/portfolio5.jpg" alt="">
-            <div class="portfolio-layer">
-              <h4>Em desenvolvimento...</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
-              <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
-            </div>
+        <div class="portfolio-box">
+          <img src="images/portfolio5.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Em desenvolvimento...</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -175,7 +184,34 @@
 
     <!-- contact section design -->
 
+    <section class="contact" id="contact">
+      <h2 class="heading">Fale <span>Comigo!</span></h2>
+
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Nome Completo">
+          <input type="email" placeholder="E-mail">
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="Numero de Celular">
+          <input type="text" placeholder="Assunto">
+        </div>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Sua Mensagem"></textarea>
+        <input type="submit" value="Enviar Mensagem" class="btn">
+      </form>
+    </section>
+
     <!-- footer design -->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2024 por Gabriel Centeno │ Todos os Direitos Reservados.</p>
+      </div>
+
+      <div class="footer-iconTop">
+        <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+      </div>
+
+    </footer>
 
 
     <!-- scroll reveal -->
