--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://github.com/100teno" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/gabrielcentheno/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
-            <a href="images/CV_2024.pdf" class="btn">Download CV</a>
+            <a href="images/CV_2024.pdf" class="btn" target="_blank">Download CV</a>
         </div>
 
         <div class="home-img">
