--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
 
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -59,7 +60,7 @@
 
       <div class="about-content">
         <h2 class="heading">Sobre <span>Mim</span></h2>
-        <h3>Full Stack Developer Junior!</h3>
+        <h3>Full Stack Developer Junior</h3>
         <p>Entusiasta em tecnologias, fissurado por desenvolvimento
           e soluções, estudando para moldar a tecnologia ao meu
           favor, ao favor do mundo. <br>
@@ -76,7 +77,7 @@
           Cada dia melhor, nem que seja 1%, estarei sempre
           progredindo.
         </p>
-          <a href="#" class="btn">Read More</a>
+          <a href="#portfolio" class="btn">Read More</a>
       </div>
     </section>
 
