--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <img src="images/portfolio1.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Landing Page Responsiva</h4>
-            <p>Desenvolvimento exemplo de uma landing page simples totalmente responsiva com flex boxes, grids, menu interativo e objetivo, botão para retornar ao topo e menu lateral responsivo utilizando apenas HTML e CSS (JavaScript é utilizado na maioria dos desenvolvimentos, essa é uma exceção onde ele não foi aplicado).</p>
+            <p>Desenvolvimento exemplo de uma landing page simples totalmente responsiva com flex boxes, grids, imagens na galeria com animações, menu fixo, interativo e objetivo, botão para retornar ao topo e menu expansível responsivo utilizando apenas HTML e CSS (JavaScript é utilizado na maioria dos desenvolvimentos, essa é uma exceção onde ele não foi aplicado).</p>
             <a href="https://landingpage100teno.netlify.app/#intro" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
