--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         <div class="portfolio-box">
           <img src="images/portfolio2.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Em desenvolvimento...</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
-            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+            <h4>Aplicativo de Clima</h4>
+            <p>Um aplicativo de Clima em tempo real desenvolvido em HTML, CSS e JavaScript, utilizando a aplicação de uma API Pública para as informações atualizadas. <br> A API utilizada é de uso gratuito e fornece todos os dados de condições climáticas em tempo real de todas as cidades do mundo.</p>
+            <a href="https://100teno.github.io/weather-app/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
