--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
           <img src="images/portfolio2.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Aplicativo de Clima</h4>
-            <p>Um aplicativo de Clima em tempo real desenvolvido em HTML, CSS e JavaScript, utilizando a aplicação de uma API Pública para as informações atualizadas. <br> A API utilizada é de uso gratuito e fornece todos os dados de condições climáticas em tempo real de todas as cidades do mundo.</p>
+            <p>Um aplicativo de Clima em tempo real desenvolvido em HTML, CSS e JavaScript, utilizando a aplicação de uma API Pública para as informações atualizadas. <br> A API utilizada é de uso gratuito e fornece todos os dados de condições climáticas em tempo real de todas as cidades do mundo. <br>
+            O usuário digita qualquer cidade do mundo e os dados climáticos em tempo real aparecem na tela.</p>
             <a href="https://100teno.github.io/weather-app/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
@@ -143,9 +144,11 @@
         <div class="portfolio-box">
           <img src="images/portfolio3.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Em desenvolvimento...</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
-            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+            <h4>Calculadora de porcentagem</h4>
+            <p>Este é um aplicativo simples de uma calculadora de porcentagem, desenvolvido utilizando HTML, CSS e JavaScript, aplicando lógica básica de programação com o JS para calcular quanto é a porcentagem de um número. <br>
+              O usuário deve inserir dois valores, a porcentagem que deseja descobrir o valor e o número, e o aplicativo irá calcular.
+            </p>
+            <a href="https://100teno.github.io/calculadora-porcentagem/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
