--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <img src="images/portfolio3.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Calculadora de porcentagem</h4>
-            <p>Este é um aplicativo simples de uma calculadora de porcentagem, desenvolvido utilizando HTML, CSS e JavaScript, aplicando lógica básica de programação com o JS para calcular quanto é a porcentagem de um número. <br>
+            <p>Este é um aplicativo simples de uma calculadora de porcentagem, desenvolvido utilizando HTML, CSS e JavaScript, aplicando lógica básica de programação com o JS para calcular quanto é a porcentagem de um número. 
               O usuário deve inserir dois valores, a porcentagem que deseja descobrir o valor e o número, e o aplicativo irá calcular.
             </p>
             <a href="https://100teno.github.io/calculadora-porcentagem/" target="_blank"><i class='bx bx-link-external'></i></a>
