solving some problems

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gabriel Centeno Portfolio</title>
 
-    <!-- box icons -->
+   
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <!-- custom css -->
+   
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <!-- header design -->
+    
     <header class="header">
         <a href="#" class="logo">Gabriel Centeno</a>
 
@@ -31,7 +31,7 @@
     </header>
 
 
-    <!-- home section design -->
+    
     <section class="home" id="home">
         <div class="home-content">
             <h3>Eai viajante, sou eu</h3>
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <!-- about section design -->
+  
     <section class="about" id="about">
       <div class="about-img">
         <img src="images/about.png" alt="">
@@ -60,7 +60,7 @@
 
       <div class="about-content">
         <h2 class="heading">Sobre <span>Mim</span></h2>
-        <h3>Full Stack Developer Junior</h3>
+        <h3>Full Stack Developer</h3>
         <p>Entusiasta em tecnologias, fissurado por desenvolvimento
           e soluções, estudando para moldar a tecnologia ao meu
           favor, ao favor do mundo. <br>
@@ -81,7 +81,7 @@
       </div>
     </section>
 
-    <!-- services section design -->
+
 
     <section class="services" id="services">
       <h2 class="heading">Meus <span>Serviços</span></h2>
@@ -117,7 +117,7 @@
       </div>
     </section>
 
-    <!-- portfolio section design -->
+
     <section class="portfolio" id="portfolio">
       <h2 class="heading"><span>Projetos</span> Recentes</h2>
 
@@ -186,7 +186,7 @@
 
 
 
-    <!-- contact section design -->
+
 
     <section class="contact" id="contact">
       <h2 class="heading">Fale <span>Comigo!</span></h2>
@@ -205,7 +205,7 @@
       </form>
     </section>
 
-    <!-- footer design -->
+
     <footer class="footer">
       <div class="footer-text">
         <p>Copyright &copy; 2024 por Gabriel Centeno │ Todos os Direitos Reservados.</p>
@@ -218,13 +218,12 @@
     </footer>
 
 
-    <!-- scroll reveal -->
+
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!-- typed js -->
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-    <!-- custom js -->
     <script src="js/script.js"></script>
   </body>
 </html>
