--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
         <div class="portfolio-box">
           <img src="images/portfolio4.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Em desenvolvimento...</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
+            <h4>Calculadora de IMC <br>(Índice de massa corporal)</h4>
+            <p>Um app simples para calcular seu IMC utilizando lógica básica de JavaScript coletando dois dados do usuário, sendo eles peso e altura, e calculando seu IMC tendo como base a formula para calculo de IMC. <br>
+              A calculadora te retona o seu IMC e em qual classificação ele se encontra.
+            </p>
             <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
