--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <p>Um app simples para calcular seu IMC utilizando lógica básica de JavaScript coletando dois dados do usuário, sendo eles peso e altura, e calculando seu IMC tendo como base a formula para calculo de IMC. <br>
               A calculadora te retona o seu IMC e em qual classificação ele se encontra.
             </p>
-            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+            <a href="https://100teno.github.io/calculadora-imc/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
