--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Back End</h3>
           <p><b>Em breve</b><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, soluta?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci cumque iusto architecto, asperiores eius in ducimus voluptatum beatae ipsam assumenda praesentium nihil natus repudiandae quae aut incidunt nesciunt nam sapiente officiis! Vitae cumque .
           </p>
           <a href="#portfolio" class="btn">Saiba Mais</a>
         </div>
@@ -110,7 +110,7 @@
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Full Stack</h3>
           <p><b>Em breve</b><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, perspiciatis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, adipisci cumque iusto architecto, asperiores eius in ducimus voluptatum beatae ipsam assumenda praesentium nihil natus repudiandae quae aut incidunt nesciunt nam sapiente officiis! Vitae cumque .
           </p>
           <a href="#portfolio" class="btn">Saiba Mais</a>
         </div>
@@ -166,9 +166,9 @@
         <div class="portfolio-box">
           <img src="images/portfolio5.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Em desenvolvimento...</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deleniti?</p>
-            <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+            <h4>Lista de Tarefas</h4>
+            <p>Uma simples lista de tarefas utilizando lógica com JavaScript, com botões para adicionar e apagar tarefas. O app salva os dados da lista no navegador local em uma JSON string, para um próximo uso, <br> onde as tarefas salvas não serão perdidas. <br> O foco do projeto foi a lógica e não estilização.</p>
+            <a href="https://100teno.github.io/taskslist/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
