--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -222,7 +222,6 @@
 
 
     <script src="https://unpkg.com/scrollreveal"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
