--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">Sobre</a>
+            <a href="#sobre">Sobre</a>
             <a href="#services">Serviços</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contato</a>
@@ -53,12 +53,12 @@
     </section>
 
   
-    <section class="about" id="about">
-      <div class="about-img">
+    <section class="sobre" id="sobre">
+      <div class="sobre-img">
         <img src="images/about.png" alt="">
       </div>
 
-      <div class="about-content">
+      <div class="sobre-content">
         <h2 class="heading">Sobre <span>Mim</span></h2>
         <h3>Full Stack Developer</h3>
         <p>Entusiasta em tecnologias, fissurado por desenvolvimento
@@ -83,11 +83,11 @@
 
 
 
-    <section class="services" id="services">
+    <section class="servicos" id="servicos">
       <h2 class="heading">Meus <span>Serviços</span></h2>
 
-      <div class="services-container">
-        <div class="services-box">
+      <div class="servicos-container">
+        <div class="servicos-box">
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Front End</h3>
           <p>Utilizo as mais recentes e utilizadas tecnologias para desenvolver sites responsivos, estilizados e personalizados do jeito que você me pedir.<br>
@@ -97,7 +97,7 @@
           <a href="#portfolio" class="btn">Saiba Mais</a>
         </div>
 
-        <div class="services-box">
+        <div class="servicos-box">
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Back End</h3>
           <p><b>Em breve</b><br>
@@ -106,7 +106,7 @@
           <a href="#portfolio" class="btn">Saiba Mais</a>
         </div>
 
-        <div class="services-box">
+        <div class="servicos-box">
           <i class='bx bx-code-alt'></i>
           <h3>Desenvolvimento Full Stack</h3>
           <p><b>Em breve</b><br>
@@ -211,7 +211,7 @@
       </div>
 
     </footer>
-    
+
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
