--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#sobre">Sobre</a>
-            <a href="#services">Serviços</a>
+            <a href="#servicos">Serviços</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contato</a>
         </nav>
