--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="sobre-content">
         <h2 class="heading">Sobre <span>Mim</span></h2>
-        <h3>Full Stack Developer</h3>
+        <h3>Software Developer</h3>
         <p>Entusiasta em tecnologias, fissurado por desenvolvimento
           e soluções, estudando para moldar a tecnologia ao meu
           favor, ao favor do mundo. <br>
